<resources>
    <string name="app_name">BachelorThesis</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_food">My Food</string>
    <string name="bottom_nav_graphs">Graphs</string>
    <string name="bottom_nav_me">Me</string>
    <string name="food_list_main_text" translatable="false">Main Text</string>
    <string name="food_list_sub_text" translatable="false">Sub text</string>
    <string name="active_measurement">Active Measurement</string>
    <string name="no_measurement_active">No measurement active</string>
    <string name="legal_notifications">Legal Notifications</string>
    <string name="update">Update</string>
    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Measurements</string>
    <string name="tab_text_3">Data</string>
    <string name="add_random_measurement_unfinished">Add random measurement (unfinished)</string>
    <string name="add_random_measurement_finished">Add random measurement (finished)</string>
    <string name="delete_all_measurements">Delete all measurements</string>
    <string name="tmp_name" translatable="false">Lorem Ipsum</string>
    <string name="tmp_street">Loremway 5</string>
    <string name="tmp_city" translatable="false">12345 Lorem</string>
    <string name="tmp_phone">Phone: 01234/789456</string>
    <string name="tmp_fax" translatable="false">Fax: 01234/789456</string>
    <string name="update_active_measurement_values">Update active measurement values</string>
    <string name="food_name">Food name</string>
    <string name="brand_name">Brand name</string>
    <string name="about_the_food">About the food</string>
    <string name="nutritional_information">Nutritional information</string>
    <string name="energy_kcal">Energy (kCal)</string>
    <string name="measurement_time_started">Time started</string>
    <string name="measurement_estimated_end_time">Estimated end time</string>
    <string name="measurement_interval">Measurement interval</string>
    <string name="measurement_date_created">Date</string>
    <string name="measurement_glucose_at_begin">glucose at begin</string>
    <string name="measurement_glucose_after_15_min">glucose after 15 min</string>
    <string name="measurement_glucose_after_30_min">glucose after 30 min</string>
    <string name="measurement_glucose_after_45_min">glucose after 45 min</string>
    <string name="measurement_glucose_after_60_min">glucose after 60 min</string>
    <string name="measurement_glucose_after_75_min">glucose after 75 min</string>
    <string name="measurement_glucose_after_90_min">glucose after 90 min</string>
    <string name="measurement_glucose_after_105_min">glucose after 105 min</string>
    <string name="measurement_glucose_after_120_min">glucose after 120 min</string>
    <string name="personal_data">Personal data</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="sex">Sex</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="fitness_level">Fitness Level</string>
    <string name="taking_medication">Medication</string>
    <string name="allergies_available">Allergies</string>
    <string name="smoking">Smoking</string>
    <string name="save">Save</string>
    <string name="general">General</string>
    <string-array name="type">
        <item>Grains</item>
        <item>Vegetables</item>
        <item>Fruit</item>
        <item>Protein</item>
        <item>Dairy</item>
        <item>Oils</item>
        <item>Solid Fats and Added Sugar</item>
        <item>Drinks</item>
        <item>Snacks</item>
    </string-array>
    <string name="kcal_100" translatable="false">kCal (100g)</string>
    <string name="measurements">Measurements</string>
    <string name="max_glucose">Max. glucose</string>
    <string name="average_glucose">Average glucose</string>
    <string name="analyses">Analyses</string>
    <string name="rating">Rating</string>
    <string name="personal_index">Personal Index</string>
    <string name="energy_kj">Energy (kJ)</string>
    <string name="fat">Fat</string>
    <string name="of_which_saturates">of which saturates</string>
    <string name="protein">Protein</string>
    <string name="carbohydrate">Carbohydrates</string>
    <string name="of_which_sugars">of which sugars</string>
    <string name="salt">Salt</string>
    <string name="advance_information">Advance information</string>
    <string name="start_value">Start value</string>
    <string name="time_consumed">Time consumed</string>
    <string name="add_sample_user">Add sample user (debug)</string>
    <string name="chose_date">Chose Date</string>
    <string name="chose_time">Chose Time</string>
    <string name="amount_consumed">Amount consumed</string>
    <string name="stress_level">Stress level</string>
    <string name="tired_level">Tired level</string>
    <string name="time_information">Time information</string>
    <string name="time_ended">Time ended</string>
    <string name="delete_measurement">Delete Measurement</string>
    <string name="clear">Clear</string>
    <string name="glucose_values">Glucose Values</string>
    <string name="glucose_after">Glucose after…</string>
    <string name="_15_minutes">… 15 minutes</string>
    <string name="_30_minutes">… 30 minutes</string>
    <string name="_45_minutes">… 45 minutes</string>
    <string name="_60_minutes">… 60 minutes</string>
    <string name="_75_minutes">… 75 minutes</string>
    <string name="_90_minutes">… 90 minutes</string>
    <string name="_105_minutes">… 105 Minuten</string>
    <string name="_120_minutes">… 120 minutes</string>
    <string name="add_coke_debug" translatable="false">Add Coke (Debug)</string>
    <string name="add_pizza_debug">Add Pizza (Debug)</string>
    <string name="add_apple_debug">Add Apple (Debug)</string>
    <string name="delete_all_foods">Delete all Foods</string>
    <string name="delete_food">Delete Food</string>
    <string name="time_min">Time (min)</string>
    <string name="glucose_mg_dl">Glucose (mg/dl)</string>
    <string name="glucose_max_peak_mg_dl">Glucose max peak (mg/dl)</string>
    <string name="amount_measurements">Amount measurements</string>
    <string name="choose_food">Choose Food</string>
    <string name="diabetes" translatable="false">Diabetes</string>
    <string name="physically_active_more_than_usual">Physically Active (More than usual)</string>
    <string name="alcohol_consumed">Alcohol consumed</string>
    <string name="ill_while_measuring">Ill (while measuring)</string>
    <string name="period">Period</string>
    <string name="physically_active2">Physically Active</string>
    <string name="events">Events</string>
    <string name="gi_measurement">Gi Measurement</string>
    <string name="line_style">Line Style</string>
    <string name="average">Average</string>
    <string name="median" translatable="false">Median</string>
    <string name="animate_graph">Animate Graph</string>
    <string name="draw_bar_graph">Draw Bar Graph</string>
    <string name="integral" translatable="false">Integral</string>
    <string name="standard_deviation">Standard deviation</string>
    <string name="_24_06_2019" translatable="false">24.06.2019</string>
    <string name="_1235_ml" translatable="false">1235 ml</string>
    <string name="_200" translatable="false">200</string>
    <string name="_120" translatable="false">120</string>
    <string name="unrated">unrated</string>
    <string name="header_glucose_increase_max">Glucose increase max (mg/dl)</string>
    <string name="header_glucose_max">Glucose max peak (mg/dl)</string>
    <string name="header_glucose_increase_average">Glucose increase average(mg/dl)</string>
    <string name="header_glucose_average">Glucose average (mg/dl)</string>
    <string name="header_integral">Integral (area unit) </string>
    <string name="select_food">Select food</string>
    <string name="draw_line_graph_glucose_increase">Draw Line Graph (Glucose increase)</string>
    <string name="draw_line_graph_glucose_over_time">Draw line Graph (Glucose over time)</string>
    <string name="compare_values">Compare Values</string>
    <string name="glucose_increase_max">Glucose increase (max)</string>
    <string name="glucose_increase_avg">Glucose increase (avg)</string>
    <string name="glucose_max">Glucose (max)</string>
    <string name="glucose_average">Glucose (average)</string>
    <string name="max_increase_glucose">Max increase glucose</string>
    <string name="average_increase_glucose">Average increase glucose</string>
    <string name="draw_graph">Draw Graph</string>
    <string name="update_measurement">Update measurement</string>
    <string name="add_food">Add Food</string>
    <string name="food_information">Food information</string>
    <string name="add_measurement">Add Measurement</string>
    <string name="edit_user_data">Edit User Data</string>
    <string name="edit_measurement">Edit measurement</string>
    <string name="measurement">Measurement</string>
    <string name="edit_food">Edit Food</string>
    <string name="single_food">Single food</string>
    <string name="all_foods">All foods</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="minutes_15">15 minutes</string>
    <string name="next">next</string>
    <string name="onboarding_1_header">Welcome :)</string>
    <string name="onboarding_2_header">Manage user data</string>
    <string name="onboarding_3_header">Manage foods</string>
    <string name="onboarding_4_header">Manage measurements</string>
    <string name="onboarding_2_text">Create and manage user data.</string>
    <string name="onboarding_3_text">Add foods you want to do glucose measurements with to your list.</string>
    <string name="onboarding_4_text">Create either GI or normal glucose measurements for one food of your list.</string>
    <string name="how_to_use_header_1">Step 1: Insert user data</string>
    <string name="how_to_use_header_2">Step 2: Add food to list</string>
    <string name="how_to_use_header_3">Step 3: Create measurement</string>
    <string name="how_to_use_header_4">Step 4: Update measurement</string>
    <string name="how_to_use_text_1">The first step always is to enter user data.
        Without user data being set, you cannot use the APP.
        This can be easily done by pressing on the "Me" button in the
        Bottom Navigation followed by the edit button (pencil icon). Then fill out the form and press
        the save button inside the action bar.</string>
    <string name="how_to_use_text_2">Next step is to add foods to the list. This is required to be
        able creating measurements for this food. Simply click on the "My Food" button in the Bottom
        Navigation. Then use the Floating Action Button (+ button), fill out the form and press the
        save icon in the action bar.</string>
    <string name="add_random_low_gi_measurement" translatable="false">Add random low GI measurement</string>
    <string name="add_random_mid_gi_measurement" translatable="false">Add random mid GI measurement</string>
    <string name="add_random_high_gi_measurement" translatable="false">Add random high GI measurement</string>
    <string name="add_random_ref_gi_measurement" translatable="false">Add random REF GI measurement</string>
    <string name="add_unfinished_gi_measurement" translatable="false">Add unfinished GI measurement</string>
    <string name="sort">sort</string>
    <string name="add_apple" translatable="false">Add Apple</string>
    <string name="add_coke" translatable="false">Add Coke</string>
    <string name="add_pizza">Add Pizza</string>
    <string name="add_glucose">Add Glucose</string>
    <string name="sort_alphanumeric">Sort alphanumeric</string>
    <string name="sort_for_gi">Sort for GI</string>
    <string name="sort_for_glucose_max">Sort for glucose max</string>
</resources>