<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_gi"
                android:orderInCategory="100"
                android:title="@string/sort_for_gi"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_glucose_max"
                android:orderInCategory="100"
                android:title="@string/sort_for_glucose_max"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/add_unfinished_gi_measurement"
        android:title="@string/add_unfinished_gi_measurement"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_low_gi_measurement"
        android:title="@string/add_random_low_gi_measurement"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_mid_gi_measurement"
        android:title="@string/add_random_mid_gi_measurement"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_high_gi_measurement"
        android:title="@string/add_random_high_gi_measurement"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_ref_gi_measurement"
        android:title="@string/add_random_ref_gi_measurement"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_measurements"
        android:title="@string/delete_all_measurements"
        app:showAsAction="never" />
</menu>