<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item android:title="@string/compare_values">
    <menu>
      <item
        android:id="@+id/graphs_all_glucose_increase_max"
        android:orderInCategory="100"
        android:title="@string/glucose_increase_max"
        app:showAsAction="never"/>
      <item
        android:id="@+id/graphs_all_glucose_max"
        android:orderInCategory="100"
        android:title="@string/glucose_max"
        app:showAsAction="never"/>
      <item
        android:id="@+id/graphs_all_glucose_avg"
        android:orderInCategory="100"
        android:title="@string/glucose_average"
        app:showAsAction="never"/>
      <item
        android:id="@+id/graphs_all_integral"
        android:orderInCategory="100"
        android:title="@string/integral"
        app:showAsAction="never"/>
      <item
        android:id="@+id/graphs_all_stdev"
        android:orderInCategory="100"
        android:title="@string/standard_deviation"
        app:showAsAction="never"/>
    </menu>
  </item>

  <item
    android:id="@+id/graphs_all_animate"
    android:orderInCategory="100"
    android:title="@string/animate_graph"
    app:showAsAction="never"/>
</menu>