<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.AddFoodActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_the_food"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <EditText
        android:id="@+id/edit_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food_name"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edit_brand_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/brand_name"
        android:inputType="text"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nutritional_information"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <EditText
        android:id="@+id/edit_energy_kcal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/energy_kcal"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edit_energy_kj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/energy_kj"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edit_fat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fat"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edit_saturates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/of_which_saturates"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edit_protein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/protein"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edit_carbohydrates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/carbohydrates"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edit_sugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/of_which_sugars"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edit_salt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salt"
        android:inputType="number"
        tools:ignore="Autofill" />
</LinearLayout>