<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="vm"
      type="hochschule.de.bachelorthesis.viewmodels.FoodViewModel"/>
  </data>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.food.MeasurementAddFragment">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/time_consumed"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/colorPrimary"/>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
          android:id="@+id/date_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/chose_date"/>

        <TextView
          android:id="@+id/date"
          style="@style/TextAppearance.MaterialComponents.Body1"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:paddingStart="32dp"
          android:paddingEnd="32dp"
          android:gravity="center"/>
      </LinearLayout>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
          android:id="@+id/time_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/chose_time"/>

        <TextView
          android:id="@+id/time"
          style="@style/TextAppearance.MaterialComponents.Body1"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:paddingStart="32dp"
          android:paddingEnd="32dp"
          android:gravity="center"/>
      </LinearLayout>

      <!-- Advance information-->
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/advance_information"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/colorPrimary"/>

      <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/gi"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="32dp"
        android:checked="@{safeUnbox(vm.measurementAddModelModel.gi)}"
        android:text="@string/gi_measurement"/>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:hint="@string/amount_consumed">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/amount"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="number"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <AutoCompleteTextView
          android:id="@+id/stress"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:cursorVisible="false"
          android:focusable="false"
          android:hint="@string/stress_level"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <AutoCompleteTextView
          android:id="@+id/tired"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:cursorVisible="false"
          android:focusable="false"
          android:hint="@string/tired_level"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/physicallyActive"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="32dp"
        android:checked="@{safeUnbox(vm.measurementAddModelModel.physicallyActivity)}"
        android:text="@string/physically_active_more_than_usual"/>

      <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/alcoholConsumed"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="32dp"
        android:checked="@{safeUnbox(vm.measurementAddModelModel.alcoholConsumed)}"
        android:text="@string/alcohol_consumed"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Events"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/colorPrimary"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
          android:id="@+id/ill"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_marginStart="32dp"
          android:checked="@{safeUnbox(vm.measurementAddModelModel.ill)}"
          android:text="@string/ill_while_measuring"/>

        <com.google.android.material.checkbox.MaterialCheckBox
          android:id="@+id/medication"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_marginEnd="32dp"
          android:checked="@{safeUnbox(vm.measurementAddModelModel.medication)}"
          android:text="@string/taking_medication"/>
      </LinearLayout>

      <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/period"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:checked="@{safeUnbox(vm.measurementAddModelModel.period)}"
        android:text="@string/period"/>

      <!-- Measurement values-->
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/measurements"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/colorPrimary"/>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:hint="@string/glucose_at_begin">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/mv0"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="number"/>
      </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
  </ScrollView>
</layout>