<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/advance_information"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text=""
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/brand_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text=""
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/kcal_100"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/text_kCal"
                android:gravity="end"
                android:padding="3dip"
                android:text=""
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:layout_marginTop="16dp"
                android:padding="3dip"
                android:text="@string/measurements"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/measurements_done"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/text_measurements_done"
                android:gravity="end"
                android:padding="3dip"
                android:text=""
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/max_glucose"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/text_max_glucose"
                android:gravity="end"
                android:padding="3dip"
                android:text=""
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/average_glucose"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/text_avg_glucose"
                android:gravity="end"
                android:padding="3dip"
                android:text=""
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:layout_marginTop="16dp"
                android:padding="3dip"
                android:text="@string/analyses"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/rating"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/text_rating"
                android:gravity="end"
                android:padding="3dip"
                android:text=""
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/personal_index"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/text_personal_gi"
                android:gravity="end"
                android:padding="3dip"
                android:text=""
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </TableRow>
    </TableLayout>
</layout>